--- a/New project/style/main.css
+++ b/New project/style/main.css
@@ -50,10 +50,6 @@ h3 {
     align-items: center;
 }
 
-. {
-
-}
-
 .header-logo {
     width: 40px;
     height: 36px;
@@ -80,9 +76,8 @@ h3 {
 }
 
 .normal-text {
-font-size: 16px;
-color: #22343D;
-
+    font-size: 16px;
+    color: #22343D;
 }
 
 .bold-text {
@@ -115,7 +110,6 @@ color: #22343D;
     font-size: 16px;
     font-weight: 700;
     color: #22343D;
-    margin-bottom: 10px;
     text-decoration: none;
 }
 
@@ -301,9 +295,9 @@ color: #22343D;
 }
 
 .client-text {
-font-size: 16px;
-font-weight: 400;
-color: #737373;
+    font-size: 16px;
+    font-weight: 400;
+    color: #737373;
 }
 
 .client-position {
@@ -354,7 +348,7 @@ color: #737373;
     padding: 50px;
     border-radius: 8px;
     max-width: 980px;
-    background-color: #02897A;*/
+    background-color: #02897A;
 }
 
 .price-box {
@@ -398,7 +392,7 @@ color: #737373;
 }
 
 .white-text {
- color: #FFFFFF;
+    color: #FFFFFF;
 }
 
 .navbar {
@@ -407,7 +401,7 @@ color: #737373;
 }
 
 .navbar .bold-link {
-    margin-bottom: 0;
+    margin-bottom: 10px;
 }
 
 .space-evenly {
@@ -430,8 +424,138 @@ color: #737373;
     padding-bottom: 50px;
 }
 
+.row-column {
+    flex-direction: row;
+}
+
+.row-column-revers {
+    flex-direction: row;
+}
+
+.people-flex {
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.people-column {
+    display: flex;
+    flex-direction: column;
+}
+
 /* de retinut marginea de trecere de la laptop la tableta este de 768 */
 
 @media only screen and (max-width: 768px) {
-    
+
+    .row-column {
+        flex-direction: column;
+    }
+
+    .row-column-revers  {
+        flex-direction: column-reverse;
+    }
+ 
+    .w50 {
+        width: 100%;
+    }
+
+    .w20 {
+        width: 100%;
+    }
+
+    .show-none-mobile {
+        display: none;
+    }
+
+    .box-shadow {
+        width: 100%;
+        margin-bottom: 40px;
+    }
+
+    .price-box {
+        width: 100%;
+        padding: 0 0 40px 0;
+        margin-bottom: 40px;
+    }
+
+    .fixed-price {
+        justify-content: center;
+    }
+
+    .client-box-shadow {
+        width: 100%;
+        margin-bottom: 40px;
+        padding: 0;
+    }
+
+    .client-text {
+        padding: 15px 10px;
+        margin: 0;
+    } 
+
+    .client-padding {
+        padding: 15px 10px;
+    }
+
+    .container-with {
+        padding: 25px 40px;
+    }
+
+    .center-mobile {
+        text-align: center;
+    }
+
+    .green-box {
+        padding: 25px 10px;
+    }
+
+    .green-box-text {
+        padding-right: 0;
+    }
+
+    .mobile-m20 {
+        margin-bottom: 20px;
+    }
+
+    .news-letter-input {
+        padding: 10px 0;
+    }
+
+    .social-media-icon {
+        justify-content: center;
+    }
+
+    .white-button {
+        width: 50%;
+    }
+
+    .green-button {
+        width: 50%;
+    }
+
+    .show-none-desktop {
+    padding: 20px 40px;
+    box-shadow: 0px -2px 8px 0px #00000040;
+    }
+
+    .people-flex {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .add-space {
+        justify-content: space-between;
+    }
+
+    .people-revers {
+        flex-direction: column-reverse;
+    }
+
 }
+
+@media only screen and (min-width: 768px) {
+    .show-none-desktop{
+        display: none;
+    }
+}
+
+
