--- a/New project/style/main-dark.css
+++ b/New project/style/main-dark.css
@@ -2,7 +2,6 @@ body {
     font-family: "Poppins", serif;
     margin: 0;
     background-color: #1F2E35;
-    color: #FFFFFF;
 }
 
 .w100 {
@@ -29,21 +28,21 @@ body {
 h2 {
     font-size: 32px;
     font-weight: 700;
-    color: #22343D;
+    color: #ffffff;
     text-align: center;
 }
 
 h3 {
     font-size: 32px;
     font-weight: 700;
-    color: #22343D;
+    color: #ffffff;
     margin-bottom: 20px;
 }
 
 .header-title {
     font-size: 30px;
     font-weight: 700;
-    color: #173A56;
+    color: #ffffff;
     margin: 0 0 0 15px;
 }
 
@@ -60,13 +59,13 @@ h3 {
 .title {
     font-size: 40px;
     font-weight: 700;
-    color: #22343D;
+    color: #ffffff;
     margin-bottom: 20px;
 }
 
 .subtitle {
     font-size: 18px;
-    color: #22343D;
+    color: #ffffff;
     margin-bottom: 45px;    
 }
 
@@ -79,46 +78,57 @@ h3 {
 
 .normal-text {
     font-size: 16px;
+    color: #ffffff;
+}
+
+.normal-text-black {
+    font-size: 16px;
+    color: #22343D;
+}
+
+.bold-text-black {
+    font-size: 16px;
+    font-weight: 700;
     color: #22343D;
 }
 
 .bold-text {
     font-size: 16px;
     font-weight: 700;
-    color: #22343D;
+    color: #ffffff;
 }
 
 .second-row-text {
     font-size: 22px;
     font-weight: 600;
-    color: #22343D;
+    color: #ffffff;
 
 }
 
 .normal-link {
     font-size: 16px;
-    color: #22343D;
+    color: #ffffff;
     margin-bottom: 10px;
     text-decoration: none;
 }
 
 .footer-normal-link {
     font-size: 16px;
-    color: #22343D;
+    color: #ffffff;
     text-decoration: none;
 }
 
 .bold-link {
     font-size: 16px;
     font-weight: 700;
-    color: #22343D;
+    color: #ffffff;
     text-decoration: none;
 }
 
 .footer-link {
     font-size: 20px;
     font-weight: 500;
-    color: #22343D;
+    color: #ffffff;
 }
 
 .big-text {
@@ -126,6 +136,7 @@ h3 {
     font-weight: 700;
     color: #22343d;
 }
+
 
 .go-green {
     color: #02897a;
@@ -189,6 +200,10 @@ h3 {
 
 .p20 {
     padding: 20px;
+}
+
+.p40 {
+    padding: 40px;
 }
 
 .pad10 {
@@ -257,7 +272,7 @@ h3 {
 }
 
 .custom-green-link {
-    background-color: #FFFFFF;
+    background-color: #00000000;
     color: #02897A;
     text-align: center;
     padding: 8px 15px;
@@ -335,7 +350,7 @@ h3 {
 .news-letter-text {
     font-size: 20px;
     font-weight: 500;
-    color: #22343D;
+    color: #FFFFFF;
     margin-bottom: 20px;
 }
 
@@ -414,7 +429,7 @@ h3 {
 }
 
 .first-bg {
-    background: url(../img/Bg-first-dark\ \(2\).png); 
+    background: url(../img/First-bg-black.png); 
     background-repeat: no-repeat;
     background-position: bottom;
     background-size: cover;
@@ -422,7 +437,7 @@ h3 {
 }
 
 .second-bg {
-    background: url(../img/Bg-second-dark\ \(3\).png);
+    background: url(../img/Second-bg-black.png);
     background-repeat: no-repeat;
     background-position: top;
     background-size: cover;
