--- a/New project/style/main-dark.css
+++ b/New project/style/main-dark.css
@@ -63,6 +63,13 @@ h3 {
     margin-bottom: 20px;
 }
 
+.title-black {
+    font-size: 40px;
+    font-weight: 700;
+    color: #000000;
+    margin-bottom: 20px;
+}
+
 .subtitle {
     font-size: 18px;
     color: #ffffff;
@@ -136,7 +143,6 @@ h3 {
     font-weight: 700;
     color: #22343d;
 }
-
 
 .go-green {
     color: #02897a;
