--- a/New project/style/main-dark.css
+++ b/New project/style/main-dark.css
@@ -115,7 +115,6 @@ h3 {
 .normal-link {
     font-size: 16px;
     color: #ffffff;
-    margin-bottom: 10px;
     text-decoration: none;
 }
 
@@ -426,7 +425,7 @@ h3 {
     align-items: center;
 }
 
-.navbar .bold-link {
+.navbar  {
     margin-bottom: 10px;
 }
 
